# SeventhUmbral

./: .gitignore  .gitmodules  InstallingServer.md  License.txt  Readme.md
AffinityInjector/: AffinityInjector.vcxproj  dllmain.cpp  framework.h
actorviewer/: ActorViewer.cpp  ActorViewer.h  DebugOverlay.cpp  DebugOverlay.h  Pch.h  TouchFreeCamera.cpp
build_ios/: GeneralSettings.xcconfig  WorldEditor-Info.plist  WorldEditor-Prefix.pch
build_unix/: CMakeLists.txt  build_clang.sh  ffxivd_daemon  install.txt
build_win32/: ActorViewer.vcxproj  ActorViewer.vcxproj.filters  Daemon.vcxproj  Daemon.vcxproj.filters  DataObjects.vcxproj  DataObjects.vcxproj.filters  ExternalDependencies.userprops.template  GeneralSettings.props  GeneralSettings_ActorViewer.props  GeneralSettings_Daemon.props  GeneralSettings_Launcher.props  GeneralSettings_RenderObjects.props  GeneralSettings_Workshop.props  GeneralSettings_WorldEditor.props  Launcher.vcxproj  Launcher.vcxproj.filters  RenderObjects.vcxproj  RenderObjects.vcxproj.filters  Settings.NuGet.Executable.props  Settings.NuGet.StaticLibrary.props  SeventhUmbral.sln  Workshop.vcxproj  Workshop.vcxproj.filters  WorldEditor.vcxproj  WorldEditor.vcxproj.filters  servers.xml
common/: AddDefaultCharacter.sql  BLOWFISH.C  BLOWFISH.H  CreateDatabase.sql  GameInstallInfo.cpp  GameInstallInfo.h
daemon/: ActorDatabase.cpp  ActorDatabase.h  AppConfig.cpp  AppConfig.h  AppearanceDatabase.cpp  AppearanceDatabase.h  BasePacket.cpp  BasePacket.h  Character.cpp  Character.h  Clock.cpp  Clock.h  CompositePacket.cpp  CompositePacket.h  DatabaseConnectionManager.cpp  DatabaseConnectionManager.h  GameServer.cpp  GameServer.h  GameServerPlayer.cpp  GameServerPlayer.h  GameServer_Ingame.h  GameServer_Login.h  GameServer_MoveOutOfRoom.h  GlobalData.cpp  GlobalData.h  Instance.cpp  Instance.h  LobbyServer.cpp  LobbyServer.h  LobbyServerPlayer.cpp  LobbyServerPlayer.h  LobbyServer_Login.h  Log.cpp  Log.h  Main.cpp  ModifyEntityPacket.cpp  ModifyEntityPacket.h  PacketUtils.cpp  PacketUtils.h  SetActorPropertyPacket.h  (+11 more)
data/: ffxivd_actors.xml  ffxivd_character.xml  ffxivd_sheetcolumns.xml  ffxivd_weapon_appearances.xml  ffxivd_zone_blackshroud.xml  ffxivd_zone_coerthas.xml  ffxivd_zone_lanoscea.xml  ffxivd_zone_mordhona.xml  ffxivd_zone_rivenroad.xml  ffxivd_zone_thanalan.xml
dataobjects/: ChunkLoader.cpp  ChunkLoader.h  FileManager.cpp  FileManager.h  GtexData.cpp  GtexData.h  HalfFloat.cpp  HalfFloat.h  MapLayout.cpp  MapLayout.h  ResourceDefs.h  ResourceNode.h  SectionLoader.cpp  SectionLoader.h  Sheet.cpp  Sheet.h  SheetData.cpp  SheetData.h  SheetSchema.cpp  SheetSchema.h  XmlFileDecoder.cpp  XmlFileDecoder.h
doc/: FFXIV 1 Skill List.txt  battle_packet.txt  command_ids.txt  enemy_ids.txt  equip_item.txt  inventory_packet.txt  server_commands.html
launcher/: AppConfig.cpp  AppConfig.h  AppDef.h  AppPreferences.h  AsyncService.h  DownloaderService.cpp  DownloaderService.h  GameSettingsWindow.cpp  GameSettingsWindow.h  Launcher.cpp  Launcher.h  LauncherWindow.cpp  LauncherWindow.h  PatchFile.cpp  PatchFile.h  PatchProcess.cpp  PatchProcess.h  PatcherService.cpp  PatcherService.h  PatcherWindow.cpp  PatcherWindow.h  Res.rc  ServerDefs.cpp  ServerDefs.h  Utils.cpp  Utils.h  WinMain.cpp  changelog.html  installer.nsi  manifest.xml  null_login.html  resource.h  servers.xml
renderobjects/: D3DShader.cpp  D3DShader.h  D3DShaderConstantTable.cpp  D3DShaderConstantTable.h  D3DShaderDisassembler.cpp  Dx11UmbralEffect.cpp  Dx11UmbralEffect.h  Dx11UmbralEffectGenerator.cpp  Dx11UmbralEffectGenerator.h  Dx11UmbralEffectProvider.cpp  Dx11UmbralEffectProvider.h  FileManager.cpp  GlEsUmbralEffect.cpp  GlEsUmbralEffect.h  GlEsUmbralEffectGenerator.cpp  GlEsUmbralEffectGenerator.h  GlEsUmbralEffectProvider.cpp  GlEsUmbralEffectProvider.h  GlobalResources.cpp  GlobalResources.h  ResourceManager.cpp  ResourceManager.h  UmbralActor.cpp  UmbralActor.h  UmbralEffect.h  UmbralEffectProvider.cpp  UmbralEffectProvider.h  UmbralMap.cpp  UmbralMap.h  UmbralMesh.cpp  UmbralMesh.h  UmbralModel.cpp  UmbralModel.h  WeaponVars.cpp  WeaponVars.h
website/: config_template.php  control_panel.php  control_panel_common.php  control_panel_edit_character.php  control_panel_header.php  control_panel_login.php  control_panel_logout.php  create_user.php  create_user_success.php  database.php  dbconfig_template.php  header.php  login.php  presets_armor.json  presets_weapon.json
workshop/: AboutWindow.cpp  (+49 more)
(+284 files in other folders)
